[package]
name = "winmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1"
widestring = "1.0.2"
[target.'cfg(windows)'.dependencies]
user32-sys = "0.2.0"
winapi = { version = "0.3", features = ["winuser"] }